hphp/hack/test/typecheck/test_consts15.php.exp
File "test_consts15.php", line 8, characters 18-20:
Cannot re-declare this constant as abstract (Typing[4142])
File "test_consts15.php", line 4, characters 13-13:
Previously defined here
